Ctrl-G matches XML tags

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 Mon Feb 28 2005  Joe Allen <jhallen@world.std.com>
 
 	User defined text delimiters
+	XML delimiter matching
 
 Sun Feb 27 2005  Joe Allen <jhallen@world.std.com>
 
