Fix pointer leak

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 Wed Mar  2 2005  Joe Allen <jhallen@world.std.com>
 
+	Fix pointer leak.
+
+Wed Mar  2 2005  Joe Allen <jhallen@world.std.com>
+
 	Fix warnings from various syntax files (can't
 	believe I didn't notice this...)
 
