--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar  3 2005  Joe Allen <jhallen@world.std.com>
+
+	New help screen for math.
+
 Wed Mar  2 2005  Joe Allen <jhallen@world.std.com>
 
 	Fix pointer leak.
