--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Mar 12 00:31:23 EST 2005
+
+	Update other *rc files.
+	Fix some marking bugs in jpico.
+
 Fri Mar 11 2005  Joe Allen <jhallen@world.std.com>
 
 	Help text points to doc files
