--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@ Sat Mar 12 00:31:23 EST 2005
 	Update other *rc files.
 	Fix some marking bugs in jpico.
 	Allow colors to be specified in joerc file
+	Improve perl again.
 
 Fri Mar 11 2005  Joe Allen <jhallen@world.std.com>
 
