--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Sun Mar 13 12:39:18 EST 2005
+
+	Fix -mnew and -mold when there are multiple
+	files on command line.
+
+	Add file locking.
+
 Sat Mar 12 00:31:23 EST 2005
 
 	Update other *rc files.
