--- a/TODO
+++ b/TODO
@@ -3,6 +3,7 @@ Short list for 3.2:
 - - - - - - - -
 
   define characters which make up words
+    There are some A-Zs in tomatch (should use i18n).
 
 - - - - - - - -
 
@@ -16,8 +17,6 @@ Short list for 3.2:
     - Reload modified files (or current window)
 
 - - - - - - - -
-
-- document some things which are in joerc file: like yank, and switch buffers.
 
 - update help screens: some things have changed (emacs is more like emacs).
 
