Allow ~ expansion in -backpath

--- a/TODO
+++ b/TODO
@@ -1,9 +1,7 @@
 
 Short list for 3.2:
 
-check: ^KE , load old file, what happens with locks?
-
--backpath should get ~ expansion.
+~j <tab> should complete use name...
 
 perl again: if (-s foo)  looks like s/
 
