--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,8 @@ Thu Mar 17 18:54:06 EST 2005
 
 	Fix ufilt (broke with irix fix)
 
+	Fix if (-s ...) in perl
+
 Wed Mar 16 11:04:19 EST 2005
 
 	Check if system joerc file is newer than local joerc file.
