parse rc file only once

--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,8 @@ Thu Mar 17 18:54:06 EST 2005
 
 	Fix if (-s ...) in perl
 
+	Parse *rc file only once
+
 Wed Mar 16 11:04:19 EST 2005
 
 	Check if system joerc file is newer than local joerc file.
